force-app/main/default/objects/QA__c/QA__c.object-meta.xml
<CustomObject>
    <label>QA</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>QA#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>