force-app/main/default/objects/QA__c/fields/Action_Items_Monday__c.field-meta.xml
<CustomField>
    <fullName>Action_Items_Monday__c</fullName>
    <label>Action Items - Monday</label>
    <type>Url</type>
</CustomField>