force-app/main/default/objects/QA__c/fields/Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>Conducted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This could relate to an inspection, audit or a repair conducted on an infringement notice</inlineHelpText>
    <label>Conducted by</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>QA</relationshipLabel>
    <relationshipName>QA</relationshipName>
    <type>Lookup</type>
</CustomField>