force-app/main/default/objects/QA__c/fields/Date_Repair_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Repair_Completed__c</fullName>
    <description>The date the repair was completed on</description>
    <label>Date Repair Completed</label>
    <type>Date</type>
</CustomField>