force-app/main/default/objects/QA__c/fields/Date_time_of_notice__c.field-meta.xml
<CustomField>
    <fullName>Date_time_of_notice__c</fullName>
    <description>Date and time the notice was issued</description>
    <label>Date &amp; time of notice</label>
    <type>DateTime</type>
</CustomField>