force-app/main/default/objects/QA__c/fields/Description_of_notice_defect__c.field-meta.xml
<CustomField>
    <fullName>Description_of_notice_defect__c</fullName>
    <description>Write details of the infringement notice and or defect</description>
    <inlineHelpText>Write details of the infringement notice and or defect</inlineHelpText>
    <label>Description of notice/defect</label>
    <type>TextArea</type>
</CustomField>