force-app/main/default/objects/QA__c/fields/Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Document_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Attached</label>
    <type>Checkbox</type>
</CustomField>