force-app/main/default/objects/QA__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>