force-app/main/default/objects/QA__c/fields/Is_notice_related_to_vehicle_standards__c.field-meta.xml
<CustomField>
    <fullName>Is_notice_related_to_vehicle_standards__c</fullName>
    <label>Is notice related to vehicle standards?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>