force-app/main/default/objects/QA__c/fields/Place_where_notice_was_issued__c.field-meta.xml
<CustomField>
    <fullName>Place_where_notice_was_issued__c</fullName>
    <description>The name of the location where the notice was issued.</description>
    <label>Place where notice was issued</label>
    <length>40</length>
    <type>Text</type>
</CustomField>