force-app/main/default/objects/QA__c/fields/Registration_number__c.field-meta.xml
<CustomField>
    <fullName>Registration_number__c</fullName>
    <description>Asset Rego</description>
    <formula>WD_Asset__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>