force-app/main/default/objects/QA__c/fields/Repairs_conducted_by__c.field-meta.xml
<CustomField>
    <fullName>Repairs_conducted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Wild Desert Employee who completed the repair</description>
    <inlineHelpText>Name of the Wild Desert Employee who completed the repair</inlineHelpText>
    <label>Repairs conducted by</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>QA (Repairs conducted by)</relationshipLabel>
    <relationshipName>QA1</relationshipName>
    <type>Lookup</type>
</CustomField>