force-app/main/default/objects/QA__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Audit</fullName>
            </value>
            <value>
                <fullName>External Audit</fullName>
            </value>
            <value>
                <fullName>Field Safety Rig Inspection</fullName>
            </value>
            <value>
                <fullName>Field Safety Camp Inspection</fullName>
            </value>
            <value>
                <fullName>First Aid Inspection</fullName>
            </value>
            <value>
                <fullName>HSEQ</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>General Operations</fullName>
            </value>
            <value>
                <fullName>Management Field Visit</fullName>
            </value>
            <value>
                <fullName>Field Safety Field Visit</fullName>
            </value>
            <value>
                <fullName>Task Planner Inspection</fullName>
            </value>
            <value>
                <fullName>NHVAS Quarterly Compliance</fullName>
                <label>NHVR Quarterly Compliance</label>
            </value>
            <value>
                <fullName>Food Hygiene</fullName>
            </value>
            <value>
                <fullName>Water Samples</fullName>
            </value>
            <value>
                <fullName>Field Safety Workshop Inspection</fullName>
            </value>
            <value>
                <fullName>BBO</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Drug and Alcohol Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>