force-app/main/default/objects/QA__c/fields/Vin_Chasis_Number__c.field-meta.xml
<CustomField>
    <fullName>Vin_Chasis_Number__c</fullName>
    <description>Vin/Chasis number associated with WD Asset</description>
    <formula>WD_Asset__r.Vin_Number__c</formula>
    <label>Vin/Chasis Number</label>
    <type>Text</type>
</CustomField>