force-app/main/default/objects/QA__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>QA</relationshipLabel>
    <relationshipName>QA</relationshipName>
    <type>Lookup</type>
</CustomField>