force-app/main/default/objects/QA__c/recordTypes/Audit.recordType-meta.xml
<RecordType>
    <fullName>Audit</fullName>
    <active>true</active>
    <label>Audit</label>
</RecordType>