force-app/main/default/objects/QA__c/recordTypes/Field_Visit.recordType-meta.xml
<RecordType>
    <fullName>Field_Visit</fullName>
    <active>true</active>
    <label>Field Visit</label>
</RecordType>