force-app/main/default/objects/QA__c/recordTypes/Infringement_Defect.recordType-meta.xml
<RecordType>
    <fullName>Infringement_Defect</fullName>
    <active>true</active>
    <label>Infringement/Defect</label>
</RecordType>