force-app/main/default/objects/QA__c/recordTypes/Inspections.recordType-meta.xml
<RecordType>
    <fullName>Inspections</fullName>
    <active>true</active>
    <label>Inspections</label>
</RecordType>