force-app/main/default/objects/QA__c/recordTypes/Meetings.recordType-meta.xml
<RecordType>
    <fullName>Meetings</fullName>
    <active>true</active>
    <label>Meetings</label>
</RecordType>