force-app/main/default/objects/QA__c/listViews/Audits_internal.listView-meta.xml
<ListView>
    <fullName>Audits_internal</fullName>
    <columns>NAME</columns>
    <columns>Date_Conducted__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Details__c</columns>
    <columns>Conducted_by__c</columns>
    <columns>Closure_Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA__c.Audit</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Internal Audit</value>
    </filters>
    <label>Audits - Internal</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>