force-app/main/default/objects/QA__c/listViews/Auditstransport.listView-meta.xml
<ListView>
    <fullName>Auditstransport</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Date_Conducted__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Details__c</columns>
    <columns>Conducted_by__c</columns>
    <columns>Closure_Target_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>transport - roma</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA__c.Audit,QA__c.Meetings</value>
    </filters>
    <label>Audits/Meetings - Transport</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>