force-app/main/default/objects/QA__c/listViews/Infringements_Defect_Register.listView-meta.xml
<ListView>
    <fullName>Infringements_Defect_Register</fullName>
    <columns>NAME</columns>
    <columns>WD_Asset__c</columns>
    <columns>Vin_Chasis_Number__c</columns>
    <columns>Registration_number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_time_of_notice__c</columns>
    <columns>Place_where_notice_was_issued__c</columns>
    <columns>Description_of_notice_defect__c</columns>
    <columns>Is_notice_related_to_vehicle_standards__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Date_Repair_Completed__c</columns>
    <columns>Repairs_conducted_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA__c.Infringement_Defect</value>
    </filters>
    <label>Infringements/Defect Register</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>