force-app/main/default/objects/QA__c/listViews/Inspections_Completed.listView-meta.xml
<ListView>
    <fullName>Inspections_Completed</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Date_Conducted__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Type__c</columns>
    <columns>Details__c</columns>
    <columns>Conducted_by__c</columns>
    <columns>Closure_Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA__c.Inspections</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Water Samples</value>
    </filters>
    <label>WD Inspections - Water Samples</label>
    <sharedTo>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>