force-app/main/default/objects/QA__c/listViews/Meetings.listView-meta.xml
<ListView>
    <fullName>Meetings</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Details__c</columns>
    <columns>Conducted_by__c</columns>
    <columns>Attendees__c</columns>
    <columns>Date_Conducted__c</columns>
    <columns>Document_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA__c.Meetings</value>
    </filters>
    <label>Meetings</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>